Fix layout issues

--- a/css/maincss.css
+++ b/css/maincss.css
@@ -24,10 +24,6 @@
 	color:#dd4b39;
 }
 
-.word-cloud {
-	max-width: 450px;
-}
-
 .copyright {
 	font-size: 0.8em;
 }
